Cleaned up unused imports added version and ping commands.